--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,7 +1,7 @@
 ktor {
     deployment {
            port = 8080
-           port = ${PORT:8080}
+           server.port=${PORT:9000}
        }
        application {
            modules = [ com.nabinshrestha.ApplicationKt.module ]
