--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,6 +1,7 @@
 ktor {
     deployment {
-           server.port=${PORT:9000}
+           port = 8080
+           clearport = ${?PORT}
        }
        application {
            modules = [ com.nabinshrestha.ApplicationKt.module ]
