--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,7 +1,7 @@
 ktor {
     deployment {
            port = 9000
-           clearport = ${?PORT}
+           port = ${?PORT}
        }
        application {
            modules = [ com.nabinshrestha.ApplicationKt.module ]
